--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  pull_to_refresh: ^1.6.1
+  speech_to_text: ^6.4.1
+  speech_to_text_macos: ^1.0.2
+  http: ^1.1.2
 
 dev_dependencies:
   flutter_test:
