--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,20 @@ dependencies:
   speech_to_text: ^6.4.1
   speech_to_text_macos: ^1.0.2
   http: ^1.1.2
+  localstorage: ^4.0.1+4
+  json_serializable: ^6.7.1
+  flutter_native_splash: ^2.3.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
 
+flutter_native_splash:
+  image: assets/splash.jpg
+  color: "42a5f5"
+  fill: true
+  
 flutter:
   uses-material-design: true
 
